fix for delete icon glyph bug hitting column visibility button

--- a/Stylesheets/src/Neptune/Pages/CMS/page--component-mgmt.scss
+++ b/Stylesheets/src/Neptune/Pages/CMS/page--component-mgmt.scss
@@ -106,7 +106,7 @@
 		margin: 10px 0;
 	}
 
-	.action-column {
+	td.action-column {
 		.btn {
 			&.edit {
 				@include buttonStyleEditGlyph();
